--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "url": "https://github.com/pietgeursen/redux-hyper-morph/issues"
   },
   "homepage": "https://github.com/pietgeursen/redux-hyper-morph",
-  "dependencies": {},
+  "dependencies": {
+    "hyperscript": "^2.0.2",
+    "morphdom": "^2.2.0"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
